force-app/main/default/objects/PWChrono_Expense_Item__c/PWChrono_Expense_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Expense Claims</description>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>