force-app/main/default/objects/PWChrono_Expense_Item__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant / Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>