force-app/main/default/objects/PWChrono_Expense_Item__c/fields/Receipt_Reference__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reference__c</fullName>
    <label>Receipt Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>